@@ -121,6 +121,25 @@ class TestEvent(TestCase):
                          , startAMPM="AM"
                          )
 
+EVENT_TXT = """\
+Title: Test Event
+Subject: Foosubject
+Contributors: Jim
+Effective_date: 2002/01/01
+Expiration_date: 2009/12/31
+StartDate: 2006/02/23 18:00
+EndDate: 2006/02/23 23:00
+Location: Spuds and Suds, River Street, Anytown
+Language: French
+Rights: Anytown Gazetteer
+ContactName: Jim
+ContactEmail: jim@example.com
+ContactPhone: (888) 555-1212
+EventURL: http://www.example.com
+Creator: Jim
+
+Fundraiser for disabled goldfish
+"""
 
 class EventPUTTests(RequestTest):
 
@@ -144,6 +163,36 @@ class EventPUTTests(RequestTest):
         self.assertEqual( d.ExpirationDate(), 'None' )
         self.assertEqual( d.Language(), '' )
         self.assertEqual( d.Rights(), '' )
+        self.assertEqual( d.location, '' )
+        self.assertEqual( d.contact_name, '' )
+        self.assertEqual( d.contact_email, '' )
+        self.assertEqual( d.contact_phone, '' )
+        self.assertEqual( d.event_url, '' )
+
+    def test_PutWithMetadata(self):
+        self.REQUEST['BODY'] = EVENT_TXT
+        self.REQUEST.environ['CONTENT_TYPE'] = 'text/html'
+        d = self._makeOne('foo')
+        d.PUT(self.REQUEST, self.RESPONSE)
+
+        self.assertEqual( d.Title(), 'Test Event' )
+        self.assertEqual( d.Format(), 'text/html' )
+        self.assertEqual( d.Description().strip()
+                        , 'Fundraiser for disabled goldfish' 
+                        )
+        self.assertEqual( d.Subject(), ('Foosubject',) )
+        self.assertEqual( d.Contributors(), ('Jim',) )
+        self.assertEqual( d.EffectiveDate(), '2002-01-01 00:00:00' )
+        self.assertEqual( d.ExpirationDate(), '2009-12-31 00:00:00' )
+        self.assertEqual( d.Language(), 'French' )
+        self.assertEqual( d.Rights(), 'Anytown Gazetteer' )
+        self.assertEqual( d.location, 'Spuds and Suds, River Street, Anytown' )
+        self.assertEqual( d.contact_name, 'Jim' )
+        self.assertEqual( d.contact_email, 'jim@example.com' )
+        self.assertEqual( d.contact_phone, '(888) 555-1212' )
+        self.assertEqual( d.event_url, 'http://www.example.com' )
+        self.assertEqual( d.start(), DateTime('2006/02/23 18:00') )
+        self.assertEqual( d.end(), DateTime('2006/02/23 23:00') )
 
 
 def test_suite():
